--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
 
   <dependencies>
 
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-eureka</artifactId>
-      <version>${spring.cloud.starter.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.cloud</groupId>-->
+      <!--<artifactId>spring-cloud-starter-eureka</artifactId>-->
+      <!--<version>${spring.cloud.starter.version}</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -94,11 +94,11 @@
 
 
     <!-- hystrix client -->
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-hystrix</artifactId>
-      <version>${spring.cloud.starter.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.cloud</groupId>-->
+      <!--<artifactId>spring-cloud-starter-hystrix</artifactId>-->
+      <!--<version>${spring.cloud.starter.version}</version>-->
+    <!--</dependency>-->
 
     <!-- hikaricp -->
     <dependency>
