--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,18 +34,18 @@ management:
         allowed-methods: /*
         allowed-origins: /*
 # eureka
-eureka:
-  instance:
-    hostname: xiaoqiang
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}  # 在2.0以上的版本需要instance-id: ${spring.cloud.client.ip-address}:${server.port}
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://10.114.24.203:8081/eureka/,http://10.114.24.204:8081/eureka/,http://10.114.24.207:8081/eureka/
-    registry-fetch-interval-seconds: 30
-    eureka-service-url-poll-interval-seconds: 10
+#eureka:
+#  instance:
+#    hostname: xiaoqiang
+#    prefer-ip-address: true
+#    instance-id: ${spring.cloud.client.ip-address}:${server.port}  # 在2.0以上的版本需要instance-id: ${spring.cloud.client.ip-address}:${server.port}
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://10.114.24.203:8081/eureka/,http://10.114.24.204:8081/eureka/,http://10.114.24.207:8081/eureka/
+#    registry-fetch-interval-seconds: 30
+#    eureka-service-url-poll-interval-seconds: 10
 ribbon:
   MaxAutoRetriesNextServer: -1
 feign:
